# openrov-experimental-protobuf

./: .gitmodules  CMakeLists.txt  README.md
plugins/PoseSensor/: CPoseSensor.cpp  CPoseSensor.h  PoseMessage.proto
plugins/PositionSensor/: CPositionSensor.cpp  CPositionSensor.h
plugins/PositionSensor/proto/: PositionSensor.pb.h  PositionSensor.proto
plugins/TempSensor/: CTempSensor.cpp  CTempSensor.h
plugins/TempSensor/proto/: TempSensor.proto
plugins/TemperatureSensor/: CTemperatureSensor.cpp  CTemperatureSensor.h  TemperatureMessage.proto
scripts/: build.sh  stage_firmware.py
src/: CPositionSensor.cpp  NCommManager.cpp  NCommManager.h  PositionSensor.pb.cpp  ROVMessage.h  main.cpp
src/common/: .NCommManager.h.swp  Master.proto  MessageTypes.h  NCommManager.cpp  NCommManager.h  NCommManagerTemplate.cpp  ROVMessage.h
